syntax = "proto3";

package com.galaxy13.homework;

option java_multiple_files = true;

message SequenceRequestMessage {
  int32 start = 1;
  int32 finish = 2;
}

message SequenceValueResponse {
  int32 value = 1;
}

service RemoteSequenceService {
  rpc generateSequence(SequenceRequestMessage) returns (stream SequenceValueResponse);
}
